--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "babel": "^6.23.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -12,18 +11,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@babel/node": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
-    "nodemon": "^2.0.4"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server.js",
-    "dev:start": "clear; nodemon --exec babel-node server.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": "14.2.0"
