--- a/package.json
+++ b/package.json
@@ -4,46 +4,18 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "~8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@capacitor/core": "2.0.2",
-    "@ionic-native/core": "^5.0.7",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
     "body-parser": "^1.19.0",
-    "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.10.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
-  },
-  "private": true,
-  "devDependencies": {
-    "@angular/cli": "^9.1.8",
-    "@angular/compiler-cli": "^8.2.14",
-    "typescript": "~3.4.3"
+    "morgan": "^1.10.0"
   },
   "scripts": {
-    "ng": "ng",
-    "build": " cd ./frontend && ng build",
-    "heroku-postbuild": "cd ./frontend && ng build",
-    "start": "node server.js && cd ./frontend && ng serve"
+    "start": "node server.js"
   },
   "engines": {
-    "node": "14.2.0",
-    "npm": "6.14.4"
+    "node": "14.2.0"
   },
   "author": "Muskaan Jain",
   "license": "ISC"
