--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js && cd ./frontend && npm start"
   },
   "engines": {
     "node": "14.2.0"
