--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "morgan": "^1.10.0"
   },
   "scripts": {
+    "heroku-postbuild": "cd ./frontend && npm install",
     "start": "node server.js && cd ./frontend && npm start"
   },
   "engines": {
-    "node": "14.2.0"
+    "node": "14.2.0",
+    "npm": "6.14.4"
   },
   "author": "Muskaan Jain",
   "license": "ISC"
