--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.27",
     "@angular/compiler": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@capacitor/cli": "2.0.2",
