--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~8.3.23",
+    "@angular/animations": "~8.2.14",
+    "@angular-devkit/build-angular": "^0.803.27",
+    "@angular/cdk": "~8.2.3",
+    "@angular/cli": "^8.3.27",
+    "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
     "@angular/core": "~8.2.14",
-    "@angular/material": "~8.2.3",
-    "@angular/common": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
